[package]
name = "certified-assets"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-certified-assets = { git = "https://github.com/3cL1p5e7/cdk-rs", tag = "0.1.1"}
ic-cdk = { git = "https://github.com/3cL1p5e7/cdk-rs", tag = "0.1.1"}
ic-cdk-macros = { git = "https://github.com/3cL1p5e7/cdk-rs", tag = "0.1.1"}
