[package]
name = "certified-assets"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-certified-assets = { path = "../cdk-rs/src/ic-certified-assets", version = "0.1.0" }
ic-cdk = { path = "../cdk-rs/src/ic-cdk", version = "0.4.0" }
ic-cdk-macros = { path = "../cdk-rs/src/ic-cdk-macros", version = "0.4.0" }
